--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "LibreNMS is an autodiscovering PHP/MySQL-based network monitoring 
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fcc300
+  primary: da223a
   secondary: fec503  
   secondary-dark: 333
 
