--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: "LibreNMS is an autodiscovering PHP/MySQL-based network monitoring 
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: da223a
-  secondary: fec503  
+  secondary: c91028
   secondary-dark: 333
 
 # Team names, titles and social links
